# pyVASP

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: release.yml
docs/: developer_manual.md  user_manual.md
src/pyvasp/: __init__.py
src/pyvasp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyvasp/api/: __init__.py  routes.py  schemas.py  server.py
src/pyvasp/application/: __init__.py  ports.py  use_cases.py
src/pyvasp/cli/: main.py
src/pyvasp/core/: __init__.py  analysis.py  errors.py  models.py  payloads.py  result.py  tabular.py  validators.py
src/pyvasp/electronic/: __init__.py  parser.py
src/pyvasp/gui/: __init__.py  bridge.py  host.py  launcher.py
src/pyvasp/gui/assets/: app.js  index.html  style.css
src/pyvasp/inputgen/: __init__.py  generator.py
src/pyvasp/outcar/: __init__.py  parser.py
tests/fixtures/: DOSCAR.sample  DOSCAR.spin.sample  EIGENVAL.sample  structure.si2.json
tests/fixtures/discovery_root/group/run_b/: OUTCAR
tests/fixtures/discovery_root/run_a/: OUTCAR
tests/integration/api/: test_outcar_summary_api.py
tests/integration/cli/: test_cli_summary.py
tests/integration/gui/: test_bridge_modes.py
tests/unit/application/: test_use_cases.py
tests/unit/core/: test_analysis.py  test_errors.py  test_payloads.py  test_tabular.py
tests/unit/electronic/: test_electronic_parser.py
tests/unit/inputgen/: test_generator.py
tests/unit/outcar/: test_parser.py
