[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvasp"
version = "0.1.0"
description = "Layered architecture toolkit for VASP input generation, post-processing, and visualization."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "pyVASP contributors"}
]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[project.scripts]
pyvasp-api = "pyvasp.api.server:main"
pyvasp-gui = "pyvasp.gui.host:main"
pyvasp-cli = "pyvasp.cli.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
